--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <form id="search-images">
+    <form id="search-images" class="form">
       <label>
         <input
           type="text"
